# cmake_lessons

./: .gitignore
2020-01-20/02_cmakeVersion/: CMakeLists.txt
2020-01-20/03_cmakeMultipleFiles/: CMakeLists.txt
2020-01-20/04_cmakeWithLib/: CMakeLists.txt
2020-01-20/05_cmakeWithMultipleLibs/: CMakeLists.txt  main.c
2020-01-20/05_cmakeWithMultipleLibs/SubLib/: suber.c
2020-01-20/06_cmakeWithRecursiveSubdirLoop/: CMakeLists.txt
2020-01-20/06_cmakeWithRecursiveSubdirLoop/AdderLib/: CMakeLists.txt
2020-01-20/06_cmakeWithRecursiveSubdirLoop/SubLib/: CMakeLists.txt
2020-01-20/onlyWithMakefile/: Makefile
